force-app/main/default/objects/Video_Content__dlm/fields/transcript_c__c.field-meta.xml
<CustomField>
    <fullName>transcript_c__c</fullName>
    <label>transcript</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>